change body coler with css

--- a/test1.html
+++ b/test1.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>keyhan web</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 <h1>keyhan head</h1>
