--- a/test1.html
+++ b/test1.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="fa" dir="rtl">
   <head>
     <meta charset="utf-8">
     <title>keyhan web</title>
@@ -9,7 +9,6 @@
   <body>
 <h1>keyhan head</h1>
 <h2>keyhan head</h2>
-
 <h3>keyhan head</h3>
 <h4>keyhan head</h4>
 <h5>keyhan head</h5>
