--- a/test1.html
+++ b/test1.html
@@ -14,6 +14,40 @@
 <h5>keyhan head</h5>
 <h6>keyhan head</h6>
 
+
+<table>
+  <thead>
+    <th>عنوان اول </th>
+    <th>عنوان دوم </th>
+    <th>عنوان سوم </th>
+  </thead>
+<tbody>
+  <tr>
+    <td>متن۱</td>
+    <td>متن۱</td>
+    <td>متن۱</td>
+  </tr>
+  <tr>
+      <td>متن2</td>
+      <td>متن2</td>
+      <td>متن2</td>
+  </tr>
+  <tr>
+      <td>متن3</td>
+      <td>متن3</td>
+      <td>متن3</td>
+  </tr>
+  <tr>
+      <td>متن4</td>
+      <td>متن4</td>
+      <td>متن4</td>
+  </tr>
+</tbody>
+<tfoot>
+</tfoot>
+</table>
+
+
 <p>my name is keyhan this is a my first project html and css project  </p>
 <p>this is a title </p>
   </body>
