--- a/test1.html
+++ b/test1.html
@@ -51,6 +51,13 @@
 <p>this is a title </p>
 
 
-<a href="https://google.com">وب سایت گوگل</a>
+<a href="https://google.com">   وب سایت گوگل </a>
+
+<a href="https://google.com" hreflang="en" target="_blank" >2وب سایت گوگل</a>
+
+<a href="https://yahoo.com" hreflang="en" target="_blank" >سایت یاهو  </a>
+<a href="https://google.com" hreflang="en" target="_blank" rel="author">3وب سایت گوگل</a>
+
+
   </body>
 </html>
