add image and ul and ol tags

--- a/test1.html
+++ b/test1.html
@@ -52,12 +52,39 @@
 
 
 <a href="https://google.com">   وب سایت گوگل </a>
+<br>
 
 <a href="https://google.com" hreflang="en" target="_blank" >2وب سایت گوگل</a>
+<br>
 
 <a href="https://yahoo.com" hreflang="en" target="_blank" >سایت یاهو  </a>
+<br>
+
 <a href="https://google.com" hreflang="en" target="_blank" rel="author">3وب سایت گوگل</a>
+<br>
 
 
+<img src="images/Begonia.jpeg" alt="Begonia image" title="flower image" width="400" height="400" >
+<br>
+
+عکس با لینک به یک سایت
+<br>
+
+<a href="https://google.com" title="google">
+  <img src="images/Balloon Flower.jpg" alt="Anthurium image" title="image with like to google" width="400" height="400" >
+</a>
+
+<ul>
+  <li>شماره یک</li>
+  <li>شماره دو</li>
+  <li>شماره سه</li>
+  <li>شماره چهار</li>
+</ul>
+<ol>
+  <li>شماره یک</li>
+  <li>شماره دو</li>
+  <li>شماره سه</li>
+  <li>شماره چهار</li>
+</ol>
   </body>
 </html>
