background attribute set

--- a/test1.html
+++ b/test1.html
@@ -1,90 +1,77 @@
-
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-  <head>
-    <meta charset="utf-8">
-    <title>keyhan web</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-<h1>keyhan head</h1>
-<h2>keyhan head</h2>
-<h3>keyhan head</h3>
-<h4>keyhan head</h4>
-<h5>keyhan head</h5>
-<h6>keyhan head</h6>
-
-
-<table>
-  <thead>
-    <th>عنوان اول </th>
-    <th>عنوان دوم </th>
-    <th>عنوان سوم </th>
-  </thead>
-<tbody>
-  <tr>
-    <td>متن۱</td>
-    <td>متن۱</td>
-    <td>متن۱</td>
-  </tr>
-  <tr>
-      <td>متن2</td>
-      <td>متن2</td>
-      <td>متن2</td>
-  </tr>
-  <tr>
-      <td>متن3</td>
-      <td>متن3</td>
-      <td>متن3</td>
-  </tr>
-  <tr>
-      <td>متن4</td>
-      <td>متن4</td>
-      <td>متن4</td>
-  </tr>
-</tbody>
-<tfoot>
-</tfoot>
-</table>
-
-<p>my name is keyhan this is a my first project html and css project  </p>
-<p>this is a title </p>
-
-
-<a href="https://google.com">   وب سایت گوگل </a>
-<br>
-
-<a href="https://google.com" hreflang="en" target="_blank" >2وب سایت گوگل</a>
-<br>
-
-<a href="https://yahoo.com" hreflang="en" target="_blank" >سایت یاهو  </a>
-<br>
-
-<a href="https://google.com" hreflang="en" target="_blank" rel="author">3وب سایت گوگل</a>
-<br>
-
-
-<img src="images/Begonia.jpeg" alt="Begonia image" title="flower image" width="400" height="400" >
-<br>
-
-عکس با لینک به یک سایت
-<br>
-
-<a href="https://google.com" title="google">
-  <img src="images/Balloon Flower.jpg" alt="Anthurium image" title="image with like to google" width="400" height="400" >
-</a>
-
-<ul>
-  <li>شماره یک</li>
-  <li>شماره دو</li>
-  <li>شماره سه</li>
-  <li>شماره چهار</li>
-</ul>
-<ol>
-  <li>شماره یک</li>
-  <li>شماره دو</li>
-  <li>شماره سه</li>
-  <li>شماره چهار</li>
-</ol>
-  </body>
+   <head>
+      <meta charset="utf-8">
+      <title>keyhan web</title>
+      <link href="style.css" rel="stylesheet" type="text/css">
+   </head>
+   <body>
+     <!--
+      <h1>keyhan head</h1>
+      <h2>keyhan head</h2>
+      <h3>keyhan head</h3>
+      <h4>keyhan head</h4>
+      <h5>keyhan head</h5>
+      <h6>keyhan head</h6>
+      <table>
+         <thead>
+            <th>عنوان اول </th>
+            <th>عنوان دوم </th>
+            <th>عنوان سوم </th>
+         </thead>
+         <tbody>
+            <tr>
+               <td>متن۱</td>
+               <td>متن۱</td>
+               <td>متن۱</td>
+            </tr>
+            <tr>
+               <td>متن2</td>
+               <td>متن2</td>
+               <td>متن2</td>
+            </tr>
+            <tr>
+               <td>متن3</td>
+               <td>متن3</td>
+               <td>متن3</td>
+            </tr>
+            <tr>
+               <td>متن4</td>
+               <td>متن4</td>
+               <td>متن4</td>
+            </tr>
+         </tbody>
+         <tfoot></tfoot>
+      </table>
+      <p>my name is keyhan this is a my first project html and css project  </p>
+      <p>this is a title </p>
+      <a href="https://google.com">   وب سایت گوگل </a>
+      <br>
+      <a href="https://google.com" hreflang="en" target="_blank" >2وب سایت گوگل</a>
+      <br>
+      <a href="https://yahoo.com" hreflang="en" target="_blank" >سایت یاهو  </a>
+      <br>
+      <a href="https://google.com" hreflang="en" target="_blank" rel="author">3وب سایت گوگل</a>
+      <br>
+      <img src="images/Begonia.jpeg" alt="Begonia image" title="flower image" width="400" height="400" >
+      <br>
+      عکس با لینک به یک سایت
+      <br>
+      <a href="https://google.com" title="google">
+      <img src="images/Balloon Flower.jpg" alt="Anthurium image" title="image with like to google" width="400" height="400" >
+      </a>
+      <ul>
+         <li>شماره یک</li>
+         <li>شماره دو</li>
+         <li>شماره سه</li>
+         <li>شماره چهار</li>
+      </ul>
+      <ol>
+         <li>شماره یک</li>
+         <li>شماره دو</li>
+         <li>شماره سه</li>
+         <li>شماره چهار</li>
+      </ol>
+    -->
+   </body>
 </html>
