--- a/test1.html
+++ b/test1.html
@@ -6,6 +6,12 @@
       <link href="style.css" rel="stylesheet" type="text/css">
    </head>
    <body>
+     <div class="cloud">
+       set
+     </div>
+     <div class="box">
+
+     </div>
      <!--
       <h1>keyhan head</h1>
       <h2>keyhan head</h2>
